more tests and final pitest analysis