@@ -15,6 +15,7 @@ import org.mockito.Mockito;
 
 import java.io.IOException;
 import java.util.Arrays;
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
@@ -69,7 +70,7 @@ public class MotorbikeControllerTest {
         try(MockedStatic<MusicManager > configurationMockedStatic=Mockito.mockStatic(MusicManager.class)) {
             configurationMockedStatic.when(MusicManager::getInstance).thenReturn(manager);
             Motorbike m = new Motorbike(new Position(4, 5), 1);
-            arena.setMotorbikes(Arrays.asList(m));
+            arena.setMotorbikes(List.of(m));
             controller.step(game, GUI.ACTION.NONE, 2000);
             assertTrue(Frog.getLives() < 3);
         }
@@ -81,7 +82,7 @@ public class MotorbikeControllerTest {
         try(MockedStatic<MusicManager > configurationMockedStatic=Mockito.mockStatic(MusicManager.class)) {
             configurationMockedStatic.when(MusicManager::getInstance).thenReturn(manager);
             Motorbike m = new Motorbike(new Position(6, 5), 1);
-            arena.setMotorbikes(Arrays.asList(m));
+            arena.setMotorbikes(List.of(m));
             FrogController frogController = new FrogController(arena);
             frogController.step(game, GUI.ACTION.RIGHT, 2000);
             controller.step(game, GUI.ACTION.NONE, 2000);
@@ -94,7 +95,7 @@ public class MotorbikeControllerTest {
         try(MockedStatic<MusicManager > configurationMockedStatic=Mockito.mockStatic(MusicManager.class)) {
             configurationMockedStatic.when(MusicManager::getInstance).thenReturn(manager);
             Motorbike m = new Motorbike(new Position(2, 5), 1);
-            arena.setMotorbikes(Arrays.asList(m));
+            arena.setMotorbikes(List.of(m));
             FrogController frogController = new FrogController(arena);
             frogController.step(game, GUI.ACTION.LEFT, 2000);
             controller.step(game, GUI.ACTION.NONE, 2000);
@@ -108,7 +109,7 @@ public class MotorbikeControllerTest {
         try(MockedStatic<MusicManager > configurationMockedStatic=Mockito.mockStatic(MusicManager.class)) {
             configurationMockedStatic.when(MusicManager::getInstance).thenReturn(manager);
             Motorbike m = new Motorbike(new Position(3, 4), 1);
-            arena.setMotorbikes(Arrays.asList(m));
+            arena.setMotorbikes(List.of(m));
             FrogController frogController = new FrogController(arena);
             frogController.step(game, GUI.ACTION.UP, 2000);
             controller.step(game, GUI.ACTION.NONE, 2000);
@@ -122,7 +123,7 @@ public class MotorbikeControllerTest {
         try(MockedStatic<MusicManager > configurationMockedStatic=Mockito.mockStatic(MusicManager.class)) {
             configurationMockedStatic.when(MusicManager::getInstance).thenReturn(manager);
             Motorbike m = new Motorbike(new Position(3, 6), 1);
-            arena.setMotorbikes(Arrays.asList(m));
+            arena.setMotorbikes(List.of(m));
             FrogController frogController = new FrogController(arena);
             frogController.step(game, GUI.ACTION.DOWN, 2000);
             controller.step(game, GUI.ACTION.NONE, 2000);
@@ -136,7 +137,7 @@ public class MotorbikeControllerTest {
         try(MockedStatic<MusicManager > configurationMockedStatic=Mockito.mockStatic(MusicManager.class)) {
             configurationMockedStatic.when(MusicManager::getInstance).thenReturn(manager);
             Motorbike m = new Motorbike(new Position(2, 6), 1);
-            arena.setMotorbikes(Arrays.asList(m));
+            arena.setMotorbikes(List.of(m));
             FrogController frogController = new FrogController(arena);
             frogController.step(game, GUI.ACTION.DOWN, 2000);
             controller.step(game, GUI.ACTION.NONE, 2000);
