@@ -17,6 +17,7 @@ import org.mockito.Mockito;
 
 import java.io.IOException;
 import java.util.Arrays;
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
@@ -39,7 +40,7 @@ public class RockControllerTest {
         try(MockedStatic<MusicManager > configurationMockedStatic=Mockito.mockStatic(MusicManager.class)) {
             configurationMockedStatic.when(MusicManager::getInstance).thenReturn(manager);
             Rock r = new Rock(new Position(5, 5), 1);
-            arena.setRocks(Arrays.asList(r));
+            arena.setRocks(List.of(r));
             frog = new Frog(5, 5);
             arena.setFrog(frog);
             controller.step(game, GUI.ACTION.NONE, 1000);
@@ -54,7 +55,7 @@ public class RockControllerTest {
         try(MockedStatic<MusicManager > configurationMockedStatic=Mockito.mockStatic(MusicManager.class)) {
             configurationMockedStatic.when(MusicManager::getInstance).thenReturn(manager);
             Rock r = new Rock(new Position(-1, 5), 0);
-            arena.setRocks(Arrays.asList(r));
+            arena.setRocks(List.of(r));
             frog = new Frog(-1, 5);
             arena.setFrog(frog);
             controller.step(game, GUI.ACTION.NONE, 1000);
@@ -69,7 +70,7 @@ public class RockControllerTest {
         try(MockedStatic<MusicManager > configurationMockedStatic=Mockito.mockStatic(MusicManager.class)) {
             configurationMockedStatic.when(MusicManager::getInstance).thenReturn(manager);
             Rock r = new Rock(new Position(11, 5), 1);
-            arena.setRocks(Arrays.asList(r));
+            arena.setRocks(List.of(r));
             frog = new Frog(11, 5);
             arena.setFrog(frog);
             controller.step(game, GUI.ACTION.NONE, 1000);
